; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_dwarf.c_dwarf2_get_addr.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_dwarf.c_dwarf2_get_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"Unsupported Word Size %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32)* @dwarf2_get_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dwarf2_get_addr(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %13 [
    i32 4, label %7
    i32 8, label %10
  ]

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @dwarf2_get_u4(i8* %8)
  store i64 %9, i64* %5, align 8
  br label %16

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = call i64 @dwarf2_get_u8(i8* %11)
  store i64 %12, i64* %5, align 8
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @FIXME(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %14)
  store i64 0, i64* %5, align 8
  br label %16

16:                                               ; preds = %13, %10, %7
  %17 = load i64, i64* %5, align 8
  ret i64 %17
}

declare dso_local i64 @dwarf2_get_u4(i8*) #1

declare dso_local i64 @dwarf2_get_u8(i8*) #1

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
